<resources>
    <string name="app_name">Beyond Zero</string>
    <string name="title_activity_social">Social</string>

    <string name="txt_content">Notice that we have included the onClick handler in the XML, and that we are using styles. A quick reminder: if you are doing serious Android development, and are using neither styles, includes nor fragments to maximize re-usability, you are creating your own hell.</string>
    <string name="title_activity_mombasa">Mombasa</string>
    <string name="title_activity_donate">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phoneno</string>
    <string name="prompt_amount">Amount</string>
    <string name="action_sign_in">Donate</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="category">
        <item>junior</item>
        <item>champs</item>
        <item>5Km</item>
        <item>10Km</item>
        <item>21Km</item>
        <item>wheelchair</item>

    </string-array>

    <string-array name="idtype">
        <item>National ID </item>
        <item>Passport</item>
        <item>Diplomatic Pass</item>


    </string-array>

    <string-array name="tshirts">
        <item>Extra Small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>

    </string-array>

    <string-array name="gender">
        <item>male</item>
        <item>female</item>

    </string-array>


    <string-array name="time">
        <item>under 40 mins</item>
        <item>40mins - 1hr</item>
        <item>Over 1hr</item>
        <item>Under1hr 10mins - 1hr 40mins</item>
        <item>Over 1hr 40mins</item>

    </string-array>

    <string-array name="currency">
        <item>KES</item>
        <item>TZH</item>
        <item>$USD</item>
        <item> €EUR</item>
        <item>UGX</item>
        <item>¥YEN</item>
        <item>₹RUPEE</item>

    </string-array>
    <string name="title_activity_routes">Map</string>
    <string name="player_error">Error initializing YouTube player</string>


    <string-array name="county">
        <item>Baringo</item>
        <item>Bomet</item>
        <item>Bungoma</item>
        <item>Busia</item>
        <item>Elgeyo Marakwet</item>
        <item>Embu</item>
        <item>Garissa</item>
        <item>Homa Bay</item>
        <item>Isiolo</item>
        <item>Kajiado</item>
        <item>Kakamega</item>
        <item>Kericho</item>
        <item>Kiambu</item>
        <item>Kilifi</item>
        <item>Kirinyaga</item>
        <item>Kisii</item>
        <item>Kisumu</item>
        <item>Kitui</item>
        <item>Kwale</item>
        <item>Laikipia</item>
        <item>Lamu</item>
        <item>Machakos</item>
        <item>Makueni</item>
        <item>Mandera</item>
        <item>Marsabit</item>
        <item>Meru</item>
        <item>Migori</item>
        <item>Mombasa</item>
        <item>Muranga</item>
        <item>Nairobi</item>
        <item>Nakuru</item>
        <item>Nandi</item>
        <item>Narok</item>
        <item>Nyamira</item>
        <item>Nyandarua</item>
        <item>Nyeri</item>
        <item>Samburu</item>
        <item>Siaya</item>
        <item>Taita Taveta</item>
        <item>Tana River</item>
        <item>Tharaka Nithi</item>
        <item>Trans Nzoia</item>
        <item>Turkana</item>
        <item>Uasin Gishu</item>
        <item>Vihiga</item>
        <item>Wajir</item>
        <item>West Pokot</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_register2">Register2</string>

       <string name="paybill">
        <![CDATA[
        <p>4. Enter the Beyond Zero Business Number <b>994374</b></p>
        ]]>
    </string>


    <string name="donate">
        <![CDATA[
        <p>5. Enter the Account Number as  <b>DONATE</b></p>
        ]]>
    </string>
    <string name="title_activity_ten_kms">Map</string>
    <string name="title_activity_fivekm">Map</string>
    <string name="title_activity_two_kms">Map</string>
    <string name="title_activity_maptwentyone">Map</string>
    <string name="title_activity_tenkms">Map</string>
    <string name="title_activity_fivekms">Map</string>
    <string name="title_activity_twokms">Map</string>

</resources>
